[package]
name = "vault-audit"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
hmac = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
vault-common = { workspace = true }
